# gyropractor

./: .dockerignore  .env.dist  .env.test  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml
res/: db.sql
src/: db.rs  error.rs  main.rs  routes.rs  ws.rs
src/handler/: api.rs  health.rs  mod.rs  ws.rs
src/model/: alert.rs
src/repo/: alert.rs
test/: functional-test.js  functional.js  health-test.js  ws-test.js
test/functional/: alert-endpoints.js  ws-endpoints.js
test/load/: constant-vus.js
tooling/: env-init.sh  k6-entrypoint.sh
