[package]
name = "gyropractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
mobc = "0.8"
mobc-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.20"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
